kubernetes/apps/jenkins/jenkins/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins
spec:
  hostnames:
    - ci.${D_IGI}
  parentRefs:
    - name: cloudflare
      namespace: network
      sectionName: https-igi
  rules:
    - backendRefs:
        - name: jenkins
          namespace: jenkins
          port: 8080
